# melty2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  blake3.c  melty2.c
.github/workflows/: cmake-multiplatform.yml  run-ctest.yml
bigcrush/: CMakeLists.txt  run_bigcrush.c  run_bigcrush.cc
bigcrush_result/: melty2.txt  melty2_bitrev.txt
include/: melty2.h  melty2.hpp
src/: CMakeLists.txt  blake2b.c  blake3.c  melty2.c  melty2_bulk_dispatch.c  melty2_bulk_dispatch.cc  melty2_bulk_impl.c  melty2_gen.c  melty2_gen32.c  melty2_gen32_dispatch.cc  melty2_gen_dispatch.cc  melty2_init.c  melty2_kernel.h  melty2_rawblkgen.c  melty2_rawblkgen_dispatch.c  melty2_rawblkgen_dispatch.cc  melty2_seeder.c  melty2_util.h
test/: CMakeLists.txt  bigcrush.c  blake3.c  gen_seeder_tests.py  gen_test_melty2_init.py  gen_test_melty2_seeder.py  test_blake3.c  test_gen.c  test_melty2.c  test_melty2_gen.c  test_melty2_hpp.cc  test_melty2_init.h  test_melty2_seeder.c  test_melty2_seeder.h  test_seeder.c  test_seeder.h
