if(MELTY2_INTERNAL_SWAP32_CTR)
  add_compile_definitions(MELTY2_INTERNAL_SWAP32_CTR)
endif()

macro(melty2_add_rawblkgen_lib_ suffix)
  add_library(melty2_rawblkgen_${suffix}_ OBJECT melty2_rawblkgen.c)
  target_include_directories(melty2_rawblkgen_${suffix}_ PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../include)
  target_compile_features(melty2_rawblkgen_${suffix}_ PRIVATE c_std_99)
  if(CMAKE_C_COMPILER_ID MATCHES "GNU" OR CMAKE_C_COMPILER_ID MATCHES "Clang")
    target_compile_options(melty2_rawblkgen_${suffix}_ PRIVATE -std=c99 -Wall -Wextra -Wpedantic -Werror $<$<NOT:$<CONFIG:Debug>>:-O3>)
  endif()
  if(MELTY2_ENABLE_CPU_FEATURES)
    target_compile_definitions(melty2_rawblkgen_${suffix}_ PRIVATE MELTY2_RAWBLKGEN_SUFFIX=${suffix})
  endif()
endmacro()

melty2_add_rawblkgen_lib_(avx512)
melty2_add_rawblkgen_lib_(avx2)
melty2_add_rawblkgen_lib_(sse2)
melty2_add_rawblkgen_lib_(sve)
melty2_add_rawblkgen_lib_(neon)
melty2_add_rawblkgen_lib_(generic)

list(APPEND MELTY2_RAWBLKGEN_LIBS melty2_rawblkgen_generic_)

if(MELTY2_ENABLE_CPU_FEATURES)
  add_library(melty2_rawblkgen_dispatch_ OBJECT melty2_rawblkgen_dispatch.c)
  target_include_directories(melty2_rawblkgen_dispatch_ PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../include
    ${CMAKE_CURRENT_SOURCE_DIR}/../third_party/cpu_features/include
  )
  target_compile_features(melty2_rawblkgen_dispatch_ PRIVATE c_std_11)
  if(CMAKE_C_COMPILER_ID MATCHES "GNU" OR CMAKE_C_COMPILER_ID MATCHES "Clang")
    target_compile_options(melty2_rawblkgen_dispatch_ PRIVATE -std=c11 -Wall -Wextra -Wpedantic -Werror)
  endif()
  if(MSVC)
    target_compile_options(melty2_rawblkgen_dispatch_ PRIVATE /experimental:c11atomics)
  endif()
  list(APPEND MELTY2_RAWBLKGEN_LIBS melty2_rawblkgen_dispatch_)

  if(MSVC)
    if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86_64|AMD64|amd64)$")
      target_compile_options(melty2_rawblkgen_avx512_ PRIVATE /arch:AVX512)
      list(APPEND MELTY2_RAWBLKGEN_LIBS melty2_rawblkgen_avx512_)
      target_compile_options(melty2_rawblkgen_avx2_ PRIVATE /arch:AVX2)
      list(APPEND MELTY2_RAWBLKGEN_LIBS melty2_rawblkgen_avx2_)
    endif()
  else()
    if(CMAKE_SYSTEM_PROCESSOR MATCHES "^(x86_64|AMD64|amd64)$")
      target_compile_options(melty2_rawblkgen_avx512_ PRIVATE -mavx512f)
      list(APPEND MELTY2_RAWBLKGEN_LIBS melty2_rawblkgen_avx512_)
      target_compile_options(melty2_rawblkgen_avx2_ PRIVATE -mavx2)
      list(APPEND MELTY2_RAWBLKGEN_LIBS melty2_rawblkgen_avx2_)
    elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^i.86$")
      target_compile_options(melty2_rawblkgen_avx2_ PRIVATE -mavx2)
      list(APPEND MELTY2_RAWBLKGEN_LIBS melty2_rawblkgen_avx2_)
      target_compile_options(melty2_rawblkgen_sse2_ PRIVATE -msse2)
      list(APPEND MELTY2_RAWBLKGEN_LIBS melty2_rawblkgen_sse2_)
    elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^(arm64|ARM64|aarch64)" )
      target_compile_options(melty2_rawblkgen_sve_ PRIVATE -march=armv8.2-a+sve)
      list(APPEND MELTY2_RAWBLKGEN_LIBS melty2_rawblkgen_sve_)
    elseif(CMAKE_SYSTEM_PROCESSOR MATCHES "^arm")
      target_compile_options(melty2_rawblkgen_neon_ PRIVATE -mfpu=neon)
      list(APPEND MELTY2_RAWBLKGEN_LIBS melty2_rawblkgen_neon_)
    endif()
  endif()
endif()

foreach(l ${MELTY2_RAWBLKGEN_LIBS})
  list(APPEND MELTY2_RAWBLKGEN_OBJS $<TARGET_OBJECTS:${l}>)
endforeach()
add_library(melty2 melty2_gen.c melty2_init.c ${MELTY2_RAWBLKGEN_OBJS})

target_include_directories(melty2 PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/../include>
  $<INSTALL_INTERFACE:include>
)
target_compile_features(melty2 PUBLIC c_std_99)
if(CMAKE_C_COMPILER_ID MATCHES "GNU" OR CMAKE_C_COMPILER_ID MATCHES "Clang")
  target_compile_options(melty2 PRIVATE -std=c99 -Wall -Wextra -Wpedantic -Werror)
endif()
if(MELTY2_ENABLE_CPU_FEATURES)
  target_link_libraries(melty2 PRIVATE cpu_features)
endif()

get_target_property(melty2_use_pic_ melty2 POSITION_INDEPENDENT_CODE)
set_target_properties(${MELTY2_RAWBLKGEN_LIBS} PROPERTIES POSITION_INDEPENDENT_CODE ${melty2_use_pic_})

install(TARGETS melty2 EXPORT melty2-config)
install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/../include/ DESTINATION include)
install(EXPORT melty2-config DESTINATION lib/cmake/melty2)
