add_executable(test_melty2 test_melty2.c)
target_link_libraries(test_melty2 PRIVATE melty2)
target_compile_features(test_melty2 PRIVATE c_std_99)
if(CMAKE_C_COMPILER_ID MATCHES "GNU" OR CMAKE_C_COMPILER_ID MATCHES "Clang")
  target_compile_options(test_melty2 PRIVATE -std=c99 -Wall -Wextra -Wpedantic -Werror)
endif()
add_test(NAME test_melty2 COMMAND test_melty2)

add_executable(test_melty2_hpp test_melty2_hpp.cc)
target_link_libraries(test_melty2_hpp PRIVATE melty2)
target_compile_features(test_melty2_hpp PRIVATE cxx_std_11)
if(CMAKE_C_COMPILER_ID MATCHES "GNU" OR CMAKE_C_COMPILER_ID MATCHES "Clang")
  target_compile_options(test_melty2_hpp PRIVATE -std=c++11 -Wall -Wextra -Wpedantic -Werror)
endif()
add_test(NAME test_melty2_hpp COMMAND test_melty2_hpp)
